--- a/frameworks/hdfs/universe/marathon.json.mustache
+++ b/frameworks/hdfs/universe/marathon.json.mustache
@@ -63,6 +63,7 @@
     "BOOTSTRAP_URI": "{{resource.assets.uris.bootstrap-zip}}",
     "JAVA_URI": "{{resource.assets.uris.jre-tar-gz}}",
     "ZONE_RESOLVER": "{{resource.assets.uris.zone-resolver-sh}}",
+    "HDFS_IMAGE": "{{resource.assets.container.docker.hdfs-image}}",
 
     {{#service.region}}
     "SERVICE_REGION": "{{service.region}}",
